# ComprasGov.AI-NEXORA

./: .gitignore  CODEX.MD  CONTEXT.md  CONTRIBUTING.md  FLUXO_ETP_TR_COMPLETO.md  JULES.MD  README.md  RELATORIO_FINAL_IMPLEMENTACAO.md  RELATORIO_SESSAO_2024-10-27.md  RELATORIO_SESSAO_COMPLETO.md  RELATORIO_STATUS_SISTEMA.md  RESUMO_EXECUTIVO_ETP_TR.md  RUNBOOK.md  TECHNICAL_DEBTS.md  docker-compose.yml  eslint.config.mjs  jest.config.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  render.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  vercel.json
app/: layout.tsx
apps/backend/: .env.example  pyproject.toml  render_build.sh  requirements.txt
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: __init__.py
apps/backend/app/api/routes/: __init__.py  contracts.py
apps/backend/app/core/: config.py
apps/backend/app/db/: __init__.py  session.py
apps/backend/app/domain/: __init__.py  models.py
apps/backend/app/graphql/: __init__.py  query.py  types.py
apps/backend/app/models/: __init__.py  contracts.py
apps/backend/app/repositories/: __init__.py  contracts.py
apps/backend/app/schemas/: __init__.py  contracts.py
apps/backend/app/services/: __init__.py  unified_data.py
apps/backend/app/services/contracts/: __init__.py  clause_extractor.py
docs/: RISCO_AI.md  render-deploy-audit.md  vercel-deploy-audit.md
libs/nexora-auth/: README.md  pyproject.toml
libs/nexora-auth/nexora_auth/: __init__.py  audit.py  decorators.py  jwt.py  middlewares.py  security.py
scripts/: load-env.js  openapi-generator.mjs  (+4 more)
(+716 files in other folders)
